# forge-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  INSTALL.md  INSTALLER_SUMMARY.md  MANIFEST.txt  Makefile  QUICK_START.txt  README.md  app.py  build-installer.py  config.json  config.json.example  forge-data.json  forge.db  forge.db.bak-20260617191149  generate_docs.py  index.html  install.bat  install.py  install.sh  launcher.bat  launcher.py  launcher.sh  make_docs.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py  setup_windows.bat  superhero-forge.jsx
.claude/: settings.json  settings.local.json
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/components/: AlignmentBadge.jsx  CharacterPage.jsx  DeepLoreQuiz.jsx  EditPanel.jsx  FireflyLauncher.jsx  GenerateImageButton.jsx  ImagePromptQuestionnaire.jsx  InspirationsField.jsx  MetaAILauncher.jsx  OllamaGuide.jsx  RaceSelector.jsx  RemotePanel.jsx  StatBar.jsx  TeamCard.jsx  TeamCreator.jsx  TeamLogo.jsx  Tripo3DLauncher.jsx
client/src/constants/: index.js
client/src/utils/: helpers.js
mnt/user-data/outputs/forge-server/: app.py  run.bat
mnt/user-data/outputs/forge-server/static/: index.html
static/: index.html
static/css/: theme.css
static/js/: app.js
templates/: base.html
templates/partials/: _navbar.html  _tabbar.html  _toast.html  characters.html  settings.html  story.html  teams.html  villains.html
tests/: test_app.py
webview-data/EBWebView/: Local State
webview-data/EBWebView/BrowserMetrics/: BrowserMetrics-6A3168EE-47C8.pma  BrowserMetrics-6A31690F-EA8.pma  BrowserMetrics-6A316950-53A0.pma  BrowserMetrics-6A31A7A2-5508.pma
webview-data/EBWebView/Default/: BrowsingTopicsState  DIPS  History  Preferences  Secure Preferences
webview-data/EBWebView/Default/Cache/Cache_Data/: data_0  data_1  index
webview-data/EBWebView/Default/DawnGraphiteCache/: data_1  index
webview-data/EBWebView/Default/DawnWebGPUCache/: data_1  index
webview-data/EBWebView/Default/EdgeSessions/: SessionRestoreLog
webview-data/EBWebView/Default/Extension Rules/: LOG
webview-data/EBWebView/Default/Extension Scripts/: LOG
webview-data/EBWebView/Default/Extension State/: LOG  LOG.old
webview-data/EBWebView/Default/GPUCache/: data_1  index
webview-data/EBWebView/Default/Session Storage/: LOG  LOG.old
webview-data/EBWebView/Default/Site Characteristics Database/: LOG  LOG.old
webview-data/EBWebView/Default/shared_proto_db/: LOG  LOG.old
webview-data/EBWebView/GrShaderCache/: data_0  data_1  index
webview-data/EBWebView/ShaderCache/: data_1  index
webview-data/EBWebView/component_crx_cache/: metadata.json
(+9 files in other folders)
